# 1bitLLM

./: .gitignore  1bit_LLM_調査レポート.md  UI生成プロンプト.md  デモアプリ要件定義.md
app/: gradlew  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/app/src/main/java/com/example/onbitllm/: MainActivity.kt
app/app/src/main/java/com/example/onbitllm/engine/: EngineManager.kt  LlamaBridge.kt  LlamaEngine.kt  MockLlamaEngine.kt
app/app/src/main/java/com/example/onbitllm/model/: ChatMessage.kt  ChatSession.kt
app/app/src/main/java/com/example/onbitllm/repository/: ChatRepository.kt
app/app/src/main/java/com/example/onbitllm/ui/components/: ChatBubble.kt  ChatHeader.kt  ChatInputBar.kt  ImagePreviewBar.kt  ImageSourceBottomSheet.kt  ModelSelectorButton.kt  ModelSelectorDialog.kt  RecordingInputBar.kt  ResourceMonitorOverlay.kt  SessionListSheet.kt
app/app/src/main/java/com/example/onbitllm/ui/screens/: ChatScreen.kt
app/app/src/main/java/com/example/onbitllm/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/java/com/example/onbitllm/util/: ImageUtils.kt
app/app/src/main/java/com/example/onbitllm/viewmodel/: ChatViewModel.kt  ResourceViewModel.kt
app/app/src/main/res/drawable/: ic_launcher_foreground.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/main/res/xml/: file_paths.xml
app/gradle/: libs.versions.toml
